--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Collection</title>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="image/ccs-logo-w-bg.png" type="image/x-icon">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -24,6 +28,7 @@
     <!-- DataTables CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/2.2.1/css/dataTables.bootstrap5.min.css">
 
+    <!-- Custome CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -109,26 +114,37 @@
     <div class="container">
         <!-- Information Cards -->
         <div class="row g-3 mb-3">
-            <!-- Payment Collected -->
+            <!-- Amount Collected -->
             <div class="col-6 col-lg-3">
-                <div class="card card-body bg-dark text-white">
-                    <div class="d-flex justify-content-between">
-                        <span>Amount Collected</span>
-                        <i data-feather="bar-chart-2"></i>
+                <div class="card text-white bg-dark shadow h-100">
+                    <div class="card-body d-flex flex-column justify-content-between">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <span>Amount Collected</span>
+                            <i data-feather="bar-chart-2"></i>
+                        </div>
+                        <div class="mt-auto">
+                            <p class="m-0">₱ <span x-data x-text="$store.records.totalPayments"></span></p>
+                        </div>
                     </div>
-                    <p>₱ <span x-data x-text="$store.records.totalPayments"></span></p>
                 </div>
             </div>
+
+            <!-- Students Paid -->
             <div class="col-6 col-lg-3">
-                <div class="card card-body bg-dark text-white">
-                    <div class="d-flex justify-content-between">
-                        <span>Student Paid</span>
-                        <i data-feather="user"></i>
+                <div class="card text-white bg-dark shadow h-100">
+                    <div class="card-body d-flex flex-column justify-content-between">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <span>Paid Student</span>
+                            <i data-feather="user"></i>
+                        </div>
+                        <div class="mt-auto">
+                            <p class="m-0"><span x-data x-text="$store.records.paidStudentCount"></span></p>
+                        </div>
                     </div>
-                    <p><span x-data x-text="$store.records.paidStudentCount"></span></p>
                 </div>
             </div>
         </div>
+        
 
         <!-- Students -->
         <div class="card">
