--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div 
                     x-data="$store.records"
                     x-init="retrieveAll()"
-                    class="table-responsive p-2" style="max-height: 50vh;">
+                    class="table-responsive" style="max-height: 50vh;">
 
                     <!-- Search Bar -->
                     <div class="input-group mb-3">
