added print functionality

--- a/index.html
+++ b/index.html
@@ -187,7 +187,15 @@
             </div>
         </div>
 
-        <!-- Students -->
+        <!-- Print Button -->
+        <div class="d-flex justify-content-end align-items-center mb-3">
+            <a href="print.html" class="btn btn-sm btn-outline-dark">
+                <i data-feather="printer" style="height: 16px;"></i>
+                Print Records
+            </a>
+        </div>
+
+        <!-- Paid Students -->
         <div class="card">
             <div class="card-body">
                 <div 
