fixed calculation isse on printing

--- a/print.html
+++ b/print.html
@@ -39,7 +39,7 @@
                 return this.payments.length;
             },
             get totalAmountCollected() {
-                return this.payments.reduce((sum, payment) => sum + payment.amount, 0);
+                return this.payments.reduce((sum, payment) => sum + parseInt(payment.amount), 0);
             }
         }"
         class="table table-bordered"
