--- a/print.html
+++ b/print.html
@@ -77,9 +77,9 @@
         function printAndGoBack(){
             window.print();
 
-            setTimeout(() => {
-                window.location.href = 'index.html';
-            }, 500);
+            // setTimeout(() => {
+            //     window.location.href = 'index.html';
+            // }, 500);
         }
     </script>
 </body>
